# PythonTemplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  activate.py
.devcontainer/: devcontainer.json  postCreateScript.sh
Makefiles/: debug.mk  rules.mk  vsc.mk
dockerfiles/: Dockerfile.debug
pythontemplate/: Makefile  activate.py  main.py  pyproject.toml  requirements.txt
pythontemplate/src/: app.py  main.py
pythontemplate/src/app/: app.py
pythontemplate/tests/: ex_test.py
